
2010-11-20
	* memory.c, syscall.c, m2skernel.h: support for memory mappings using any type of
		file descriptor. In the previous implementation of mmap, munmap, mprotect,
		a file mapping was emulated with 'seek' and 'read' system calls. Now,
		a real host call to 'mmap' is performed, so that any file descriptor can be
		used for mappings (e.g., a device such as GPU).

2010-12-03
	* issue.c: bug fixed in the order in which LQ, SQ, and IQ were handled. Memory instructions
		are prioritized over arithmetic uops.


2010-12-03
	Version 2.4.1 Released

2010-12-06
	* syscall.c: ioctl system call simplified; first gpu implementation attempt reverted.
		Instead, an additional OpenCL system call is created, used for the implementation
		of the whole OpenCL 1.1 interface.
	* libgpukernel: library added to start the OpenCL implementation project.

2010-12-08
	* m2s-pipeline.c: warnings fixed.
	* disasm.c: warnings fixed.
	* libgpukernel: restructured, files added, OpenCL extended.
	* syscall.c, gpukernel.c: redirection of libOpenCL.so to libm2s-opencl.so

2010-12-12
	* libgpukernel: OpenCL implementation.

2010-12-13
	* syscall.c: system call 'readlink' implemented.

2010-12-16
	* libm2skernel/memory.c: bug fixed. Accesses to nonexistent page cause segmentation
		faults. Page attributes were set to modified before checking if the
		page was found or not.
	* libgpukernel: Evergreen ISA + OpenCL

2010-12-17
	* libgpukernel: functional simulation.
	* syscall.c: syscall 'write': bug fixed. After the las modifications in the handling of
		asynchronous system calls, a bug was introduced in the synchronous write.
		This bug might affect any simple execution.
	* libdisasm/Makefile.am: bug in file list caused distribution to fail compiling.

2010-12-20
	* libgpukernel: local memory, functional simulation.
	* libgpudisasm: LDS formats
	* libgpukernel: assignment of 1D/3D thread IDs and work sizes.
	* libgpumachine: LDS implementation

2010-12-22
	* libgpukernel: control-flow
